--- a/src/scss/_2_components/_components.scss
+++ b/src/scss/_2_components/_components.scss
@@ -1,18 +1,9 @@
 /*--------------------------------------------------------------------------------
-## Components -> Marquee
+## Components -> Header
 --------------------------------------------------------------------------------*/
-@import '_1_marquee/_1_base';
+@import '_1_header/1_base';
 
 /*--------------------------------------------------------------------------------
-## Components -> Site Header
+## Components -> Footer
 --------------------------------------------------------------------------------*/
-@import '_2_site_header/1_base';
-@import '_2_site_header/2_menu_overlay';
-@import '_2_site_header/3_menu';
-@import '_2_site_header/4_menu_widgets';
-@import '_2_site_header/5_sh_open';
-
-/*--------------------------------------------------------------------------------
-## Components -> Site Footer
---------------------------------------------------------------------------------*/
-@import '_3_site_footer/1_base';
+@import '_3_footer/1_base';
