--- a/src/scss/_3_utilities/_common/_2_align.scss
+++ b/src/scss/_3_utilities/_common/_2_align.scss
@@ -1,15 +1,15 @@
 /*--------------------------------------------------------------------------------
 ### Utilities -> Common -> Align
 --------------------------------------------------------------------------------*/
-.align-left {
+.text-align-left {
     text-align: left;
 }
 
-.align-center {
+.text-align-center {
     text-align: center;
 }
 
-.align-right {
+.text-align-right {
     text-align: right;
 }
 
