--- a/src/scss/_0_imports/_1_functions/_functions.scss
+++ b/src/scss/_0_imports/_1_functions/_functions.scss
@@ -1,6 +1,7 @@
 // Bootstrap functions
 //
 // Utility mixins and functions for evaluating source code across our variables, maps, and mixins.
+@use 'sass:color';
 
 // Ascending
 // Used to evaluate Sass maps like our grid breakpoints.
@@ -34,7 +35,8 @@
 
 // Colors
 @function to-rgb($value) {
-    @return red($value), green($value), blue($value);
+    @return color.channel($value, 'red', $space: rgb), color.channel($value, 'green', $space: rgb),
+        color.channel($value, 'blue', $space: rgb);
 }
 
 // stylelint-disable scss/dollar-variable-pattern
@@ -212,9 +214,9 @@ $_luminance-list: 0.0008 0.001 0.0011 0.0013 0.0015 0.0017 0.002 0.0022 0.0025 0
 // See https://www.w3.org/TR/WCAG20-TECHS/G17.html#G17-tests
 @function luminance($color) {
     $rgb: (
-        'r': red($color),
-        'g': green($color),
-        'b': blue($color),
+        'r': color.channel($color, 'red', $space: rgb),
+        'g': color.channel($color, 'green', $space: rgb),
+        'b': color.channel($color, 'blue', $space: rgb),
     );
 
     @each $name, $value in $rgb {
