--- a/src/scss/_0_imports/_1_functions/_functions.scss
+++ b/src/scss/_0_imports/_1_functions/_functions.scss
@@ -1,7 +1,6 @@
 // Bootstrap functions
 //
 // Utility mixins and functions for evaluating source code across our variables, maps, and mixins.
-@use 'sass:color';
 
 // Ascending
 // Used to evaluate Sass maps like our grid breakpoints.
@@ -35,19 +34,18 @@
 
 // Colors
 @function to-rgb($value) {
-    @return color.channel($value, 'red', $space: rgb), color.channel($value, 'green', $space: rgb),
-        color.channel($value, 'blue', $space: rgb);
+    @return red($value), green($value), blue($value);
 }
 
 // stylelint-disable scss/dollar-variable-pattern
 @function rgba-css-var($identifier, $target) {
     @if $identifier == 'body' and $target == 'bg' {
-        @return rgba(var(--starter-#{$identifier}-bg-rgb), var(--starter-#{$target}-opacity));
+        @return rgba(var(--#{$prefix}#{$identifier}-bg-rgb), var(--#{$prefix}#{$target}-opacity));
     }
     @if $identifier == 'body' and $target == 'text' {
-        @return rgba(var(--starter-#{$identifier}-color-rgb), var(--starter-#{$target}-opacity));
+        @return rgba(var(--#{$prefix}#{$identifier}-color-rgb), var(--#{$prefix}#{$target}-opacity));
     } @else {
-        @return rgba(var(--starter-#{$identifier}-rgb), var(--starter-#{$target}-opacity));
+        @return rgba(var(--#{$prefix}#{$identifier}-rgb), var(--#{$prefix}#{$target}-opacity));
     }
 }
 
@@ -76,7 +74,7 @@
 @function varify($list) {
     $result: null;
     @each $entry in $list {
-        $result: append($result, var(--starter-#{$entry}), space);
+        $result: append($result, var(--#{$prefix}#{$entry}), space);
     }
     @return $result;
 }
@@ -122,7 +120,7 @@
 // Replace `$search` with `$replace` in `$string`
 // Used on our SVG icon backgrounds for custom forms.
 //
-// @author Hugo Giraudel
+// @author Kitty Giraudel
 // @param {String} $string - Initial string
 // @param {String} $search - Substring to replace
 // @param {String} $replace ('') - New value
@@ -209,18 +207,18 @@ $_luminance-list: 0.0008 0.001 0.0011 0.0013 0.0015 0.0017 0.002 0.0022 0.0025 0
     @return if($l1 > $l2, divide($l1 + 0.05, $l2 + 0.05), divide($l2 + 0.05, $l1 + 0.05));
 }
 
-// Return WCAG2.0 relative luminance
-// See https://www.w3.org/WAI/GL/wiki/Relative_luminance
-// See https://www.w3.org/TR/WCAG20-TECHS/G17.html#G17-tests
+// Return WCAG2.1 relative luminance
+// See https://www.w3.org/TR/WCAG/#dfn-relative-luminance
+// See https://www.w3.org/TR/WCAG/#dfn-contrast-ratio
 @function luminance($color) {
     $rgb: (
-        'r': color.channel($color, 'red', $space: rgb),
-        'g': color.channel($color, 'green', $space: rgb),
-        'b': color.channel($color, 'blue', $space: rgb),
+        'r': red($color),
+        'g': green($color),
+        'b': blue($color),
     );
 
     @each $name, $value in $rgb {
-        $value: if(divide($value, 255) < 0.03928, divide(divide($value, 255), 12.92), nth($_luminance-list, $value + 1));
+        $value: if(divide($value, 255) < 0.04045, divide(divide($value, 255), 12.92), nth($_luminance-list, $value + 1));
         $rgb: map-merge(
             $rgb,
             (
@@ -235,7 +233,7 @@ $_luminance-list: 0.0008 0.001 0.0011 0.0013 0.0015 0.0017 0.002 0.0022 0.0025 0
 // Return opaque color
 // opaque(#fff, rgba(0, 0, 0, .5)) => #808080
 @function opaque($background, $foreground) {
-    @return mix(rgba($foreground, 1), $background, opacity($foreground) * 100);
+    @return mix(rgba($foreground, 1), $background, opacity($foreground) * 100%);
 }
 
 // scss-docs-start color-functions
