--- a/src/scss/_4_pages/_1_home/_1_base.scss
+++ b/src/scss/_4_pages/_1_home/_1_base.scss
@@ -19,3 +19,11 @@
         color: #000;
     }
 }
+
+body {
+    h1 {
+        color: red;
+    }
+    background-color: #000;
+    height: 200px;
+}
